2005-11-02  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: certificate validation part 1
    * jabberd/jabberd.h: same
    * jabberd/mio_ssl.c: same
    * dialback/dialback.c: same
    * jabberd/log.c: makeing arguments const for some logging funcs

2005-10-21  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback.h: added setting to require STARTTLS for connections
    * dialback/dialback.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * jabberd/base/base_dir.c: changed output file naming for base_dir handler
    * jabberd/lib/jabberdlib.h: the SHA1 hashing result ends with a zero byte
    * jabberd/jabberd.h: new function to query TLS protection state of a conn
    * jabberd/mio_ssl.c: same + better openssl library initialization

2005-08-18  Matthias Wimmer  <m@tthias.net>

    * jsm/sessions.c: Fixed remaining issue of negative priorities
    * jsm/modules/mod_announce.c: same
    * jsm/modules/mod_offline.c: same + deleting delivered offline messages

2005-08-15  Matthias Wimmer  <m@tthias.net>

    * jsm/deliver.c: fix for the new session control protocol
    * jabberd/base/base_dir.c: make base_dir a bidirectional handler

2005-08-09  Matthias Wimmer  <m@tthias.net>

    * jabberd/static.c: new base handler base_dir for reading stanza files
    * jabberd/base/Makefile.am: same
    * jabberd/base/base_dir.c: same

2005-07-11  Matthias Wimmer  <m@tthias.net>

   * jabberd/lib/crc32.c: fixing sizeof() problem with arrays as function args
   * jabberd/lib/jutil.c: same
   * xdb_file/xdb_file.c: same

2005-07-08  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_useridpolicy.c: allow blocking of usernames, size limits
    * jabber.xml.dist.in: same (configuration for it)

2005-04-16  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: support for the session control protocol
    	documented in http://jabberd.jabberstudio.org/dev/docs/session.shtml,